welcome.lessons.welcome.summative.Moria.scala.code
def Moria(){
  setDirection(EST)
  while(!estFaceMur){
    avance()
    if(estSurBiscuit){
      prendBiscuit()
      while(!estSurBiscuit){
        recule()
        poseBiscuit()
      }
    }
  }
}




